researchXbrl/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
  namespace: research-xbrl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
        - name: analysis-api
          image: harunari/financial_analysis_api:stable-431
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api
  name: api
  namespace: research-xbrl
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: api
status:
  loadBalancer: {}
