researchXbrl/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: front
status:
  loadBalancer: {}
