researchXbrl/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
  namespace: research-xbrl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: front
    spec:
      containers:
        - image: harunari/financial_analysis_frontend:stable-335
          name: frontend-server
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: front
  name: front
  namespace: research-xbrl
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: front
status:
  loadBalancer: {}
