researchXbrl/rdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdb-primary
  labels:
    app: rdb-primary
  namespace: research-xbrl
spec:
  serviceName: rdb-primary
  selector:
    matchLabels:
      app: rdb-primary
  template:
    metadata:
      labels:
        app: rdb-primary
    spec:
      containers:
      - name: rdb-primary
        image: harunari/financial_report_primary_database:stable-361
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: primary-database
          subPath: postgres
      restartPolicy: Always
      volumes:
      - name: primary-database
        persistentVolumeClaim:
          claimName: auto-trade-storage
---
apiVersion: v1
kind: Service
metadata:
  name: rdb-primary
  namespace: research-xbrl
  labels:
    app: rdb-primary
spec:
  selector:
    app: rdb-primary
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
status:
  loadBalancer: {}
