researchXbrl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: research-xbrl
spec:
  rules:
    - http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-script-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: research-xbrl
spec:
  rules:
    - http:
        paths:
          - path: /dist/app-bundle.js
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: research-xbrl
spec:
  rules:
    - http:
        paths:
          - path: /api/(.*)$
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
